--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,22 +1,39 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    # Runs every 6 hours
+    - cron: "0 */6 * * *"
+  
+  # Allows manual workflow runs
   workflow_dispatch:
+  
+  # Runs on every push to main
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: AarinGuleria
-          svg_out_path: dist/github-contribution-grid-snake-dark.svg
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          # Generate both dark and light mode SVGs
+          svg_out_path: |
+            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            
+      - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
