--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,6 +14,11 @@ on:
       - main
       - master
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
