--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -30,12 +30,12 @@ jobs:
           fetch-depth: 0
 
       - name: Generate Snake Animation
-        uses: Platane/snk@master
-        id: snake-gif
+        uses: Platane/snk@v3.2.0
         with:
           github_user_name: AarinGuleria
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.gif
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
