--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,9 @@
-name: Generate Snake Animation
+name: Generate Snake
 
 on:
   schedule:
-    # Runs every minute
-    - cron: "* * * * *"
+    # Runs every 12 hours
+    - cron: "0 */12 * * *"
 
   # Allows manual workflow runs
   workflow_dispatch:
@@ -25,17 +25,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v3.2.0
+        uses: Platane/snk@master
+        id: snake-gif
         with:
           github_user_name: AarinGuleria
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
+          gif_out_path: dist/github-contribution-grid-snake.gif
 
       - name: Commit and push changes
         run: |
@@ -44,5 +44,13 @@ jobs:
           git add dist/github-contribution-grid-snake.svg dist/github-contribution-grid-snake.gif
           git commit -m "Update snake animation [skip ci]" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
